# Bach

./: .gitignore  CLAUDE.md  README.md  project_requirement.md
backend/: .env.example  pyproject.toml  verify_kiwoom.py
backend/app/: hub.py  main.py  market_clock.py  models.py  state_machine.py
backend/app/providers/: __init__.py  base.py  kiwoom.py  kiwoom_api.py  mock.py
backend/app/strategy/: ulc.py
frontend/: index.html  package-lock.json  package.json  smoke.mjs  vite.config.js
frontend/src/: App.jsx  api.js  indicators.js  store.jsx  styles.css
frontend/src/components/: AccountSummary.jsx  AutoConfigForm.jsx  Chart.jsx  IntervalSelector.jsx  LogPanel.jsx  ManualTradePanel.jsx  MarketControls.jsx  PriceTicker.jsx  StateButton.jsx  StockInput.jsx  StockPanel.jsx
