[project]
name = "bach-backend"
version = "0.1.0"
description = "주식 거래 웹 앱 백엔드 (FastAPI). 키움 API 연동(mock/live)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # live(kiwoom) 모드에서만 실제 사용. mock 모드에선 불필요.
    "requests>=2.32",
    "websockets>=13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
